示例特效完成

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three_demo",
+  "name": "three-point",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "three": "^0.128.0",
+    "three-tween": "^1.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
